<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:context=".activities.AesSharedPrefEncryptionActivity">

    <EditText
            android:id="@+id/content_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/data_content"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Enter key"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/content_text"
            android:id="@+id/key_text"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/key_text"
            app:layout_constraintEnd_toEndOf="parent">


        <Button
                android:text="@string/encrypt_btn"
                android:onClick="encryptData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/encrypt_btn" android:layout_weight="1"/>
        <Button
                android:text="@string/decrypt_btn"
                android:onClick="decryptData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/decrypt_btn" android:layout_weight="1"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>